--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-		<link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="style.css" />
     <title>3d cube</title>
   </head>
   <body>
@@ -12,26 +12,36 @@
       <div class="viewport">
         <div class="cube">
           <div class="side">
-            <div class="cube-image">1</div>
+            <div class="cube-image">Действуй</div>
           </div>
           <div class="side">
-            <div class="cube-image">2</div>
+            <div class="cube-image">Остановись</div>
           </div>
           <div class="side">
-            <div class="cube-image">3</div>
+            <div class="cube-image">Взвесь решение</div>
           </div>
           <div class="side">
-            <div class="cube-image">4</div>
+            <div class="cube-image">Еще раз подумай</div>
           </div>
           <div class="side">
-            <div class="cube-image">5</div>
+            <div class="cube-image">Уверен?</div>
           </div>
           <div class="side">
-            <div class="cube-image active">6</div>
+            <div class="cube-image active">Даже не думай</div>
           </div>
         </div>
       </div>
+
+      <div class="light x1"></div>
+      <div class="light x2"></div>
+      <div class="light x3"></div>
+      <div class="light x4"></div>
+      <div class="light x5"></div>
+      <div class="light x6"></div>
+      <div class="light x7"></div>
+      <div class="light x8"></div>
+      <div class="light x9"></div>
     </div>
-		<script src="script.js"></script>
+    <script src="script.js"></script>
   </body>
 </html>
